production/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend-deployment
          image: veeraprachv/plantique-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
